[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = "An AI agent application"
authors = ["Daniel Scholl <dascholl@microsoft.com>"]
readme = "README.md"
packages = [{include = "agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest-dotenv = "^0.5.2"
requests = "^2.32.3"
openai = "^1.46.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
